Undid the last checkin as it seems to break unipublic.
git-svn-id: https://svn.apache.org/repos/asf/incubator/lenya/trunk@38811 13f79535-47bb-0310-9956-ffa450edef68